--- a/AddItemToList.xaml
+++ b/AddItemToList.xaml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <mct:Popup xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
            xmlns:vm="clr-namespace:ShoppingLista.ViewModels"
            xmlns:local="clr-namespace:ShoppingLista"
            x:DataType="vm:MainViewModel"
-       xmlns:mct="clr-namespace:CommunityToolkit.Maui.Views;assembly=CommunityToolkit.Maui"
-             x:Class="ShoppingLista.AddItemToList"
+           xmlns:mct="clr-namespace:CommunityToolkit.Maui.Views;assembly=CommunityToolkit.Maui"
+           x:Class="ShoppingLista.AddItemToList"
            xmlns:models="clr-namespace:ShoppingLista.Models"
            Size="320,172"
+           Shell.NavBarIsVisible="False"
              >
     <VerticalStackLayout Padding="10"
                          BackgroundColor="White">
